// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletBalanceRow.vue should render correctly on desktop devices (Staked TLOS 1) 1`] = `
<div
  class="c-wallet-balance-row"
>
  <div
    class="c-wallet-balance-row__left-container"
  >
    <img
      alt="evm_wallet.token_logo_alt"
      aria-hidden="true"
      class="c-wallet-balance-row__logo"
      height="40"
      src="https://raw.githubusercontent.com/telosnetwork/token-list/main/logos/wtlos.png"
      width="40"
    />
    <div>
      <span
        class="c-wallet-balance-row__token_name"
      >
        Staked TLOS
      </span>
      <br />
      <span
        class="o-text--small"
      >
        $0.1900
      </span>
    </div>
  </div>
  <div
    class="c-wallet-balance-row__right-container"
  >
    <div
      class="c-wallet-balance-row__balance-container"
    >
      <div
        class="c-wallet-balance-row__primary-amount"
      >
        
        $691.98
        
        <!--v-if-->
      </div>
      <span
        class="c-wallet-balance-row__secondary-amount"
      >
        
        3,642.0243 STLOS
        
      </span>
    </div>
    <q-btn-stub
      aria-label="evm_wallet.balance_row_actions_aria"
      class="c-wallet-balance-row__overflow"
      dense=""
      flat=""
      icon="more_vert"
      no-icon-animation=""
    >
      
      <q-menu-stub
        anchor="bottom end"
        offset="0,16"
        self="top right"
      >
        
        <ul
          class="c-wallet-balance-row__overflow-ul"
        >
          
          <li
            aria-labelledby="overflow-text-0"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-0"
            >
              global.contract
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-1"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-1"
            >
              evm_wallet.send
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-2"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon c-wallet-balance-row__overflow-icon--stroke"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-2"
            >
              evm_wallet.add_to_metamask
            </span>
          </li>
          
        </ul>
        
      </q-menu-stub>
      
    </q-btn-stub>
  </div>
</div>
`;

exports[`WalletBalanceRow.vue should render correctly on mobile devices (Staked TLOS 2) 1`] = `
<div
  class="c-wallet-balance-row"
>
  <div
    class="c-wallet-balance-row__left-container"
  >
    <img
      alt="evm_wallet.token_logo_alt"
      aria-hidden="true"
      class="c-wallet-balance-row__logo"
      height="40"
      src="https://raw.githubusercontent.com/telosnetwork/teloscan/master/public/stlos-logo.png"
      width="40"
    />
    <div>
      <span
        class="c-wallet-balance-row__token_name"
      >
        Staked TLOS
      </span>
      <br />
      <span
        class="o-text--small"
      >
        $0.1900
      </span>
    </div>
  </div>
  <div
    class="c-wallet-balance-row__right-container"
  >
    <div
      class="c-wallet-balance-row__balance-container"
    >
      <div
        class="c-wallet-balance-row__primary-amount"
      >
        
        $691.98
        
        <!--v-if-->
      </div>
      <span
        class="c-wallet-balance-row__secondary-amount"
      >
        <tooltip-stub
          hide-icon="true"
          text="3,642.0243 STLOS"
        >
          
          3.64K STLOS
          
        </tooltip-stub>
      </span>
    </div>
    <q-btn-stub
      aria-label="evm_wallet.balance_row_actions_aria"
      class="c-wallet-balance-row__overflow"
      dense=""
      flat=""
      icon="more_vert"
      no-icon-animation=""
    >
      
      <q-menu-stub
        anchor="bottom end"
        offset="0,16"
        self="top right"
      >
        
        <ul
          class="c-wallet-balance-row__overflow-ul"
        >
          
          <li
            aria-labelledby="overflow-text-0"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-0"
            >
              global.contract
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-1"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-1"
            >
              evm_wallet.send
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-2"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon c-wallet-balance-row__overflow-icon--stroke"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-2"
            >
              evm_wallet.add_to_metamask
            </span>
          </li>
          
        </ul>
        
      </q-menu-stub>
      
    </q-btn-stub>
  </div>
</div>
`;

exports[`WalletBalanceRow.vue should render the right overflow items when the token is STLOS 1`] = `
<div
  class="c-wallet-balance-row"
>
  <div
    class="c-wallet-balance-row__left-container"
  >
    <img
      alt="evm_wallet.token_logo_alt"
      aria-hidden="true"
      class="c-wallet-balance-row__logo"
      height="40"
      src="https://raw.githubusercontent.com/telosnetwork/teloscan/master/public/stlos-logo.png"
      width="40"
    />
    <div>
      <span
        class="c-wallet-balance-row__token_name"
      >
        Staked TLOS
      </span>
      <br />
      <span
        class="o-text--small"
      />
    </div>
  </div>
  <div
    class="c-wallet-balance-row__right-container"
  >
    <div
      class="c-wallet-balance-row__balance-container"
    >
      <div
        class="c-wallet-balance-row__primary-amount"
      >
        <tooltip-stub
          hide-icon="true"
          text="3,642.0243 STLOS"
        >
          
          3.64K
          
        </tooltip-stub>
        <tooltip-stub
          icon="info"
          warnings="evm_wallet.no_fiat_value"
        >
          
          
        </tooltip-stub>
      </div>
      <!--v-if-->
    </div>
    <q-btn-stub
      aria-label="evm_wallet.balance_row_actions_aria"
      class="c-wallet-balance-row__overflow"
      dense=""
      flat=""
      icon="more_vert"
      no-icon-animation=""
    >
      
      <q-menu-stub
        anchor="bottom end"
        offset="0,16"
        self="top right"
      >
        
        <ul
          class="c-wallet-balance-row__overflow-ul"
        >
          
          <li
            aria-labelledby="overflow-text-0"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-0"
            >
              global.contract
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-1"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-1"
            >
              evm_wallet.send
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-2"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon c-wallet-balance-row__overflow-icon--stroke"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-2"
            >
              evm_wallet.add_to_metamask
            </span>
          </li>
          
        </ul>
        
      </q-menu-stub>
      
    </q-btn-stub>
  </div>
</div>
`;

exports[`WalletBalanceRow.vue should render the right overflow items when the token is TLOS 1`] = `
<div
  class="c-wallet-balance-row"
>
  <div
    class="c-wallet-balance-row__left-container"
  >
    <img
      alt="evm_wallet.token_logo_alt"
      aria-hidden="true"
      class="c-wallet-balance-row__logo"
      height="40"
      src="https://raw.githubusercontent.com/telosnetwork/teloscan/master/public/stlos-logo.png"
      width="40"
    />
    <div>
      <span
        class="c-wallet-balance-row__token_name"
      >
        Telos
      </span>
      <br />
      <span
        class="o-text--small"
      >
        $0.1900
      </span>
    </div>
  </div>
  <div
    class="c-wallet-balance-row__right-container"
  >
    <div
      class="c-wallet-balance-row__balance-container"
    >
      <div
        class="c-wallet-balance-row__primary-amount"
      >
        
        $691.98
        
        <!--v-if-->
      </div>
      <span
        class="c-wallet-balance-row__secondary-amount"
      >
        <tooltip-stub
          hide-icon="true"
          text="3,642.0243 TLOS"
        >
          
          3.64K TLOS
          
        </tooltip-stub>
      </span>
    </div>
    <q-btn-stub
      aria-label="evm_wallet.balance_row_actions_aria"
      class="c-wallet-balance-row__overflow"
      dense=""
      flat=""
      icon="more_vert"
      no-icon-animation=""
    >
      
      <q-menu-stub
        anchor="bottom end"
        offset="0,16"
        self="top right"
      >
        
        <ul
          class="c-wallet-balance-row__overflow-ul"
        >
          
          <li
            aria-labelledby="overflow-text-0"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-0"
            >
              evm_wallet.buy
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-1"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-1"
            >
              evm_wallet.send
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-2"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-2"
            >
              evm_wallet.wrap
            </span>
          </li>
          
        </ul>
        
      </q-menu-stub>
      
    </q-btn-stub>
  </div>
</div>
`;

exports[`WalletBalanceRow.vue should render the right overflow items when the token is WTLOS 1`] = `
<div
  class="c-wallet-balance-row"
>
  <div
    class="c-wallet-balance-row__left-container"
  >
    <img
      alt="evm_wallet.token_logo_alt"
      aria-hidden="true"
      class="c-wallet-balance-row__logo"
      height="40"
      src="https://raw.githubusercontent.com/telosnetwork/token-list/main/logos/wtlos.png"
      width="40"
    />
    <div>
      <span
        class="c-wallet-balance-row__token_name"
      >
        Wrapped TLOS
      </span>
      <br />
      <span
        class="o-text--small"
      >
        $0.1900
      </span>
    </div>
  </div>
  <div
    class="c-wallet-balance-row__right-container"
  >
    <div
      class="c-wallet-balance-row__balance-container"
    >
      <div
        class="c-wallet-balance-row__primary-amount"
      >
        
        $691.98
        
        <!--v-if-->
      </div>
      <span
        class="c-wallet-balance-row__secondary-amount"
      >
        <tooltip-stub
          hide-icon="true"
          text="3,642.0243 WTLOS"
        >
          
          3.64K WTLOS
          
        </tooltip-stub>
      </span>
    </div>
    <q-btn-stub
      aria-label="evm_wallet.balance_row_actions_aria"
      class="c-wallet-balance-row__overflow"
      dense=""
      flat=""
      icon="more_vert"
      no-icon-animation=""
    >
      
      <q-menu-stub
        anchor="bottom end"
        offset="0,16"
        self="top right"
      >
        
        <ul
          class="c-wallet-balance-row__overflow-ul"
        >
          
          <li
            aria-labelledby="overflow-text-0"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-0"
            >
              global.contract
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-1"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-1"
            >
              evm_wallet.send
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-2"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-2"
            >
              evm_wallet.unwrap
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-3"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon c-wallet-balance-row__overflow-icon--stroke"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-3"
            >
              evm_wallet.add_to_metamask
            </span>
          </li>
          
        </ul>
        
      </q-menu-stub>
      
    </q-btn-stub>
  </div>
</div>
`;

exports[`WalletBalanceRow.vue should render the right overflow items when the token is not a system token 1`] = `
<div
  class="c-wallet-balance-row"
>
  <div
    class="c-wallet-balance-row__left-container"
  >
    <img
      alt="evm_wallet.token_logo_alt"
      aria-hidden="true"
      class="c-wallet-balance-row__logo"
      height="40"
      src="https://raw.githubusercontent.com/telosnetwork/teloscan/master/public/stlos-logo.png"
      width="40"
    />
    <div>
      <span
        class="c-wallet-balance-row__token_name"
      >
        Shiba
      </span>
      <br />
      <span
        class="o-text--small"
      />
    </div>
  </div>
  <div
    class="c-wallet-balance-row__right-container"
  >
    <div
      class="c-wallet-balance-row__balance-container"
    >
      <div
        class="c-wallet-balance-row__primary-amount"
      >
        <tooltip-stub
          hide-icon="true"
          text="3,642.0243 SHIB"
        >
          
          3.64K
          
        </tooltip-stub>
        <tooltip-stub
          icon="info"
          warnings="evm_wallet.no_fiat_value"
        >
          
          
        </tooltip-stub>
      </div>
      <!--v-if-->
    </div>
    <q-btn-stub
      aria-label="evm_wallet.balance_row_actions_aria"
      class="c-wallet-balance-row__overflow"
      dense=""
      flat=""
      icon="more_vert"
      no-icon-animation=""
    >
      
      <q-menu-stub
        anchor="bottom end"
        offset="0,16"
        self="top right"
      >
        
        <ul
          class="c-wallet-balance-row__overflow-ul"
        >
          
          <li
            aria-labelledby="overflow-text-0"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-0"
            >
              global.contract
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-1"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-1"
            >
              evm_wallet.send
            </span>
          </li>
          <li
            aria-labelledby="overflow-text-2"
            class="c-wallet-balance-row__overflow-li"
            tabindex="0"
          >
            <div
              class="c-wallet-balance-row__overflow-icon-wrapper"
            >
              <inline-svg-stub
                aria-hidden="true"
                class="c-wallet-balance-row__overflow-icon c-wallet-balance-row__overflow-icon--stroke"
                keepduringloading="true"
                src=""
                transformsource="[Function]"
              />
            </div>
            <span
              class="c-wallet-balance-row__overflow-text"
              id="overflow-text-2"
            >
              evm_wallet.add_to_metamask
            </span>
          </li>
          
        </ul>
        
      </q-menu-stub>
      
    </q-btn-stub>
  </div>
</div>
`;
